# QuickOpenProject

./: .gitignore  CMakeLists.txt  README.md
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
debug/lib/: cmake_install.cmake
debug/src/: cmake_install.cmake
debug/tests/: cmake_install.cmake  rein.ini
debug/tests/assets/: template.txt
include/: all.hpp  arg_parser.hpp  config_file_parser_class.hpp  data.hpp  path_function.hpp  project_template.hpp
lib/: CMakeLists.txt  arg_parser.cpp  config_file_parser_class.cpp  data.cpp  path_function.cpp  project_template.cpp
src/: CMakeLists.txt  main.cpp  qop.ini
tests/: CMakeLists.txt  arg_parser.cpp  dir_iterator.cpp  gcc_version.cpp  get_exe_path.cpp  inja_template.cpp  read_ini.cpp
tests/assets/templates/cpp/: qop.json
tests/temp/: qop.json
